src/objects/Feedback_questions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Feedback__c</fullName>
        <label>Application Feedback ID</label>
        <referenceTo>Application_Feedback__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments_Required__c</fullName>
        <label>Comments Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_Name__c</fullName>
        <description>Formula field for Drawloop document.</description>
        <formula>Name__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Reviewer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <formula>IF(( ISPICKVAL( Score_yes_no__c,&quot;Yes&quot; ))
   , 100,IF(( ISPICKVAL( Score_yes_no__c,&quot;NO&quot;))
      ,0,IF(( ISPICKVAL( Score_yes_no__c,&quot;N/A&quot;))
       ,0,IF(( ISPICKVAL( Score_two_factor__c,&quot;Satisfactory&quot;))
         ,100,IF(( ISPICKVAL( Score_two_factor__c,&quot;Unsatisfactory&quot;))
          ,0,IF(( ISPICKVAL( Score_two_factor__c,&quot;N/A&quot;))
           ,0,IF(( ISPICKVAL( Score_four_factor__c,&quot;Exceeds&quot;)) 

,100,IF(( ISPICKVAL( Score_four_factor__c,&quot;Meets&quot;))
,66.66,IF(( ISPICKVAL( Score_four_factor__c,&quot;Partially Meets&quot;))
,33.33,IF(( ISPICKVAL( Score_four_factor__c,&quot;Does Not Meet&quot;))
,0,If((ISPICKVAL(Scoring_Method__c,&quot;None&quot;)),1,Score_number__c )


))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_four_factor__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_number__c</fullName>
        <label>Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_two_factor__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_yes_no__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scoring_Method__c</fullName>
        <label>Scoring Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number (1-100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes/No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Factor Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four Factor Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Question2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Question</label>
        <referenceTo>Stage_Question__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stages_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stages ID</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Score__c</fullName>
        <formula>( Score_Value__c * Weight__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Feedback Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Feedback__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Feedback__c</field>
            <operation>equals</operation>
            <value>AF-000940</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Score_Value__c</columns>
        <columns>Weighted_Score__c</columns>
        <columns>Score_number__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Feedback__c</field>
            <operation>equals</operation>
            <value>AF-000600</value>
        </filters>
        <label>Test</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FQ-{0000}</displayFormat>
        <label>Feedback questions id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Score_Number</fullName>
        <active>false</active>
        <errorConditionFormula>Score_number__c &gt; 100</errorConditionFormula>
        <errorMessage>Score should be less than 100</errorMessage>
    </validationRules>
</CustomObject>